# darn

./: .gitignore  Cargo.toml  HACKING.md  README.md  flake.nix
.github/workflows/: build.yml  cargo-audit.yml  dictionary.txt  quality.yml  release.yml  spellcheck.yml  test.yml
Formula/: darn.rb
darn_cli/: Cargo.toml  README.md
darn_cli/src/: commands.rs  main.rs  output.rs  setup.rs  theme.rs
darn_cli/tests/: cli.rs
darn_core/: Cargo.toml  README.md
darn_core/src/: atomic_write.rs  attributes.rs  concurrency.rs  config.rs  darn.rs  directory.rs  discover.rs  doc_edit.rs  dotfile.rs  file.rs  ignore.rs  lib.rs  manifest.rs  path.rs  peer.rs  refresh.rs  sedimentree.rs  serde_base58.rs  signer.rs  staged_update.rs  subduction.rs  sync_progress.rs  unix_timestamp.rs  watcher.rs  workspace.rs
darn_core/src/darn/: refresh_diff.rs
darn_core/src/directory/: entry.rs
darn_core/src/file/: content.rs  file_type.rs  metadata.rs  name.rs  state.rs
darn_core/src/file/metadata/: permissions.rs
darn_core/src/manifest/: content_hash.rs  tracked.rs
darn_core/src/workspace/: id.rs  layout.rs  registry.rs  swap.rs
darn_core/tests/: integration.rs
design/: README.md  data-model.md  overview.md  sync.md
