[workspace]
resolver = "3"
members = [
  "darn_cli",
  "darn_core"
]

[workspace.package]
authors = ["Brooklyn Zelenka <hello@brooklynzelenka.com>"]
categories = ["command-line-utilities", "filesystem"]
edition = "2024"
keywords = ["automerge", "crdt", "filesystem", "local-first", "p2p"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://codeberg.org/expede.darn"
rust-version = "1.90"
version = "0.1.0"

[workspace.dependencies]
# Local crates
darn_core = { path = "darn_core" }

anyhow = "1.0"
bolero = "0.11"
automerge = "0.7.3"
blake3 = "1.8"
bs58 = "0.5"
dirs = "6.0"
future_form = "0.2.0"
automerge_sedimentree = { path = "../subduction/automerge_sedimentree" }
clap = { version = "4.0", features = ["derive"] }
cliclack = "0.3"
console = "0.15"
minicbor = { version = "2.1", default-features = false, features = ["alloc", "derive", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sedimentree_core = { path = "../subduction/sedimentree_core", features = ["std"] }
sedimentree_fs_storage = { path = "../subduction/sedimentree_fs_storage" }
subduction_core = { path = "../subduction/subduction_core", features = ["std", "getrandom"] }
subduction_websocket = { path = "../subduction/subduction_websocket", features = ["tokio_client"] }
getrandom = "0.2"
hex = "0.4"
ignore = "0.4"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.44"
tempfile = "3.16"
tungstenite = "0.27"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
notify-debouncer-mini = "0.5"
walkdir = "2.5"

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
nonstandard_style = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }

rust_2018_idioms = { level = "deny", priority = -1 }
unreachable_pub = "deny"
unused_extern_crates = "deny"

unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "warn"
expect_used = "warn"
fallible_impl_from = "warn"
fn_params_excessive_bools = "warn"
indexing_slicing = "warn"
missing_const_for_fn = "warn"
must_use_candidate = "warn"
panic = "warn"
todo = "warn"
unneeded_field_pattern = "warn"
unwrap_used = "warn"
wildcard_enum_match_arm = "warn"

all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = "allow" # various transitive deps
pedantic = { level = "deny", priority = -1 }
