[workspace]
resolver = "3"
members = [
  "darn_cli",
  "darn_core"
]

[workspace.package]
authors = ["Brooklyn Zelenka <hello@brooklynzelenka.com>"]
categories = ["command-line-utilities", "filesystem"]
edition = "2024"
keywords = ["automerge", "crdt", "filesystem", "local-first", "p2p"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/inkandswitch/darn"
rust-version = "1.90"

[workspace.dependencies]
# Local crates
darn_core = { version = "0.3.1", path = "darn_core", default-features = false }

automerge = "0.7.3"
blake3 = "1.8"
bolero = "0.11"
color-eyre = "0.6"
eyre = "0.6"
bs58 = { version = "0.5", features = ["check"] }
clap = { version = "4.0", features = ["derive"] }
cliclack = "0.3"
console = "0.16"
dirs = "6.0"
future_form = "0.2"
futures = "0.3"
getrandom = "0.2"
globset = "0.4"
hex = "0.4"
ignore = "0.4"
minicbor = { version = "2.1", default-features = false, features = ["alloc", "derive", "std"] }
notify-debouncer-mini = "0.7"
sedimentree_core = { version = "0.4", features = ["std"] }
sedimentree_fs_storage = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subduction_core = { version = "0.4", features = ["std", "test_utils"] }
subduction_crypto = { version = "0.1", features = ["std"] }
subduction_websocket = { version = "0.4", features = ["tokio_client_any"] }
tempfile = "3.16"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tungstenite = { version = "0.27", default-features = false, features = ["handshake", "http"] }
walkdir = "2.5"

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
nonstandard_style = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }

rust_2018_idioms = { level = "deny", priority = -1 }
unreachable_pub = "deny"
unused_extern_crates = "deny"

unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "warn"
expect_used = "warn"
fallible_impl_from = "warn"
fn_params_excessive_bools = "warn"
indexing_slicing = "warn"
missing_const_for_fn = "warn"
must_use_candidate = "warn"
panic = "warn"
todo = "warn"
unneeded_field_pattern = "warn"
unwrap_used = "warn"
wildcard_enum_match_arm = "warn"

all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = "allow" # various transitive deps
pedantic = { level = "deny", priority = -1 }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
