[package]
name = "darn_cli"
description = "CLI for darn - CRDT-backed filesystem management"
version = "0.6.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "darn"
path = "src/main.rs"

[features]
default = ["iroh", "native-tls"]
iroh = ["darn_core/iroh"]
native-tls = ["darn_core/native-tls"]
rustls = ["darn_core/rustls"]

[lints]
workspace = true

[dependencies]
bs58.workspace = true
clap.workspace = true
cliclack.workspace = true
color-eyre.workspace = true
console.workspace = true
darn_core.workspace = true
eyre.workspace = true
future_form.workspace = true
futures.workspace = true
getrandom.workspace = true
sedimentree_core.workspace = true
sedimentree_fs_storage.workspace = true
subduction_core.workspace = true
subduction_websocket.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tungstenite.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
testresult.workspace = true
