[package]
name = "darn_core"
description = "Core library for darn - CRDT-backed filesystem management"
version = "0.3.0"

authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[features]
default = ["native-tls"]
native-tls = ["subduction_websocket/tokio_client"]
rustls = ["subduction_websocket/tokio_client_rustls"]

[lints]
workspace = true

[dependencies]
automerge.workspace = true
blake3.workspace = true
bs58.workspace = true
sha2 = "0.10"
dirs.workspace = true
future_form.workspace = true
futures.workspace = true
getrandom.workspace = true
globset.workspace = true
hex.workspace = true
ignore.workspace = true
minicbor.workspace = true
notify-debouncer-mini.workspace = true
sedimentree_core.workspace = true
sedimentree_fs_storage.workspace = true
serde.workspace = true
serde_json.workspace = true
subduction_core.workspace = true
subduction_crypto.workspace = true
subduction_websocket.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tungstenite.workspace = true
walkdir.workspace = true

[dev-dependencies]
bolero.workspace = true
tempfile.workspace = true
testresult = "0.4.1"
